@@ -2824,13 +2824,18 @@ describe "Postgres::Database functions, languages, schemas, and triggers" do
   end
 
   it "#create_schema and #drop_schema should create and drop schemas" do
-    @d.create_schema(:sequel)
-    @d.create_schema(:sequel, :if_not_exists=>true) if @d.server_version >= 90300
-    @d.create_table(Sequel[:sequel][:test]){Integer :a}
-    @d.tables(:schema=>:sequel).must_equal [:test]
-    @d.tables(:schema=>'sequel').must_equal [:test]
-    @d.tables(:schema=>Sequel[:sequel]).must_equal [:test]
-    @d.drop_schema(:sequel, :if_exists=>true, :cascade=>true)
+    begin
+      @d.create_schema(:sequel)
+      @d.create_schema(:sequel, :if_not_exists=>true) if @d.server_version >= 90300
+      @d.create_table(Sequel[:sequel][:test]){Integer :a}
+      @d.tables(:schema=>:sequel).must_equal [:test]
+      @d.tables(:schema=>'sequel').must_equal [:test]
+      @d.tables(:schema=>Sequel[:sequel]).must_equal [:test]
+      @d.schema(Sequel[:sequel][:test]).map(&:first).must_equal [:a]
+    ensure
+      @d.drop_schema(:sequel, :if_exists=>true, :cascade=>true)
+      proc{@d.schema(Sequel[:sequel][:test])}.must_raise Sequel::DatabaseError
+    end
   end
 
   it "#rename_schema should rename schema" do
